--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,5 +1,11 @@
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+# mySQL DB for production
 
-spring.datasource.url=jdbc:h2:mem:testDb
+spring.datasource.url = jdbc:mysql://localhost:3306/tdl
+spring.datasource.username = root
+spring.datasource.password = root
+
+spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL8Dialect
+spring.datasource.initialization-mode = always
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
